[package]
name = "ryu-ecmascript"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Aljoscha Meyer"]
license = "Apache-2.0 OR BSL-1.0"
description = "Fast floating point to string conversion, suitable for ECMAScript NumberToString"
repository = "https://github.com/ssbrs/ryu"
documentation = "https://docs.rs/ryu-ecmascript"
readme = "README.md"
build = "build.rs"

[features]
# Use smaller lookup tables. Instead of storing every required power of
# 5, only store every 26th entry, and compute intermediate values with a
# multiplication. This reduces the lookup table size by about 10x (only
# one case, and only f64) at the cost of some performance.
small = []

[[example]]
name = "benchmark"
path = "benchmark/benchmark.rs"

[dependencies]
no-panic = { version = "0.1", optional = true }

[dev-dependencies]
num_cpus = "1.8"
rand = "0.5"
